# AkkiAI_crew

./: .gitignore  README.md  dockerfile  ec2-akkiai-key.pem  pyproject.toml  report.md  requirements.txt  vercel.json
api-test/: api-test.py
src/akkiai/: Moms.txt  crew.py  hash-compute.py  kickoff_ids.py  main2.py  notes_hosting.txt  notes_http_ssl.txt  task_names.py
src/akkiai/api-secure/: hash-compute.py
src/akkiai/app/: crew.py  crewuserinputs.py  custompydantics.py  json_test.py  main.py  namespaces-pinecone.py
src/akkiai/app/config/: agents1.yaml  agents4.yaml
src/akkiai/app/config/agent/: agents2.yaml  agents3.yaml  agents4.yaml  agents5.yaml  agents6.yaml  agents7.yaml  agents8.yaml  agents9.yaml
src/akkiai/app/config/agents/: agents3.yaml
src/akkiai/app/config/task/: tasks1.yaml  tasks2.yaml  tasks3.yaml  tasks4.yaml  tasks5.yaml  tasks6.yaml  tasks7.yaml  tasks8.yaml  tasks9.yaml  tasks91.yaml
src/akkiai/app/config/tasks/: tasks1.yaml
src/akkiai/app/helpercodes/: human_inputs_custom.py
src/akkiai/app/outputs/: task1.json  task2.json  task3.json  task4.json  task5.json  task6.json
src/akkiai/app/prompt_cache/: cache.db-shm  cache.db-wal
src/akkiai/app/prompt_cache_crew/: cache.db
src/akkiai/app/prompt_cache_main/: cache.db
src/akkiai/app/test_cases/: chat.txt
src/akkiai/config/: agents.yaml  agents1.yaml  agents2.yaml  agents3.yaml  tasks.yaml  tasks1.yaml  tasks2.yaml  tasks3.yaml  tasks4.yaml
src/akkiai/notes/: Moms.txt  coroutines_await.txt  notes_hosting.txt  test_inputs.txt  token_usage.txt
supabase/: supabase_connect.py
