[project]
name = "akkiai"
version = "0.1.0"
description = "akkiai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
akkiai = "akkiai.main:run"
run_crew = "akkiai.main:run"
train = "akkiai.main:train"
replay = "akkiai.main:replay"
test = "akkiai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
